Overflow fix

--- a/style.css
+++ b/style.css
@@ -24,11 +24,15 @@
   cursor: default;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 body {
   font-family: 'vaud-display', sans-serif;
   -webkit-font-smoothing: antialiased;
   transform: translateZ(0);
-  overflow-x: hidden;
   font-weight: 400;
   line-height: 1.3;
   font-size: 17px;
